--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,15 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 
+#\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/db1?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.type-aliases-package=DM.entity
+mybatis.mapper-locations=classpath:DM/mapper/xml/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+
 ## \u6587\u4EF6\u670D\u52A1\u5668\u914D\u7F6E
 fs.dir=E:/fault/
 fs.uuidName=false
@@ -24,8 +33,8 @@ spring.jackson.date-format=yyyy/MM/dd HH:mm:ss
 logging.level.cn.org.xinke=DEBUG
 
 ## \u8BBE\u7F6E\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F
-spring.servlet.multipart.max-file-size=500Mb
-spring.servlet.multipart.max-request-size=500Mb
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 
 ## admin\u8D26\u6237\u914D\u7F6E
 admin.uname=root
