--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
     </properties>
 
     <dependencies>
+        <!--FFT需要用到的数学计算-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
