实现文件夹的重命名，以及对应试验名称或试验类型的重命名。   吐了！

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.cache=false
 #\u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://localhost:3306/db1?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db1?useTimezone=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=DM.entity
 mybatis.mapper-locations=classpath:DM/mapper/xml/*.xml
