暂时收官喽~

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,16 +29,13 @@ fs.nginxUrl=http://localhost:80/
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy/MM/dd HH:mm:ss
 
-##\u65E5\u5FD7\u914D\u7F6E
-logging.level.cn.org.xinke=DEBUG
+##\u914D\u7F6Etomcat\u8FDE\u63A5\u65F6\u95F4\u907F\u514DEOF\u5F02\u5E38
+server.tomcat.connectionTimeout =180000
+server.tomcat.max-http-form-post-size= 200MB
 
 ## \u8BBE\u7F6E\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
-
-## admin\u8D26\u6237\u914D\u7F6E
-admin.uname=root
-admin.pwd=123
 
 ## \u57DF\u540D\u914D\u7F6E
 domain=http://localhost:${server.port}
